--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ Fix Alerts
     <div id="welcomeContainer" class="animated">
         <div id="welcomeScreen">
             <h1>Welcome to Sign Language Translator</h1>
-            <h3 class="animated fadeInUp delay-2s">Sufiyaan Nadeem</h3>
+            <h3 class="animated fadeInUp delay-2s">ECM PROJECT EXPO</h3>
         </div>
         <button id="proceedButton">Proceed</button>
     </div>
