--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ Fix Alerts
     <!--Sets up stylesheet and script file linking. Adds favicon and site title as well-->
     <meta charset="UTF-8">
     <link rel="shortcut icon" type="image/png" href="Images/asl_logo.ico" />
-    <title>Sign Translator | Sufiyaan</title>
+    <title>Sign Translator | Team10</title>
     <link href="https://fonts.googleapis.com/css?family=Google+Sans:100,300,400,500" rel="stylesheet">
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/animate.css">
@@ -35,11 +35,11 @@ Fix Alerts
     (eg: instructions for Training, Prediction, and Video Chat)-->
     <div id="titleBar">
         <h1 id="stage">Train Gestures</h1>
-        <h3 id="steps">Train about 30 samples of your Start Gesture and 30 for your idle, Stop Gesture.</h3>
+        <h3 id="steps">Train about 30 samples of Start Gesture and 30 for idle, Stop Gesture.</h3>
         <button id="nextButton" class="animated flash delay-3s">Next</button>
         <button id="predictButton" class="animated flash slideInRight faster">Translate</button>
         <button id="backButton" class="animated slideInLeft faster">Back to Training</button>
-        <button id="videoCallBtn" class="videoCallBtn animated slideInRight faster">Video Call</button>
+        <button id="videoCallBtn" class="videoCallBtn animated slideInRight faster">New feature(Video call)</button>
     </div>
 
     <!--Status bar shows the status of translation-->
